apps/utilities/hello-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-app
  namespace: hello-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hello-app

  template:
    metadata:
      labels:
        app: hello-app

    spec:
      containers:
      - name: hello-app
        image: docker.home.arpa/hello-app:ec19d7292f0a481e9131a017c8b45139a4379b71

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
