apps/utilities/hello-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-app
  namespace: hello-app
  annotations:
    cert-manager.io/cluster-issuer: local-ca

spec:
  tls:
    - hosts:
        - hello-app.home.arpa
      secretName: hello-app-tls
  ingressClassName: nginx
  rules:
  - host: hello-app.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 80
